--- a/docs/rsna-breast-cancer-detection.tex
+++ b/docs/rsna-breast-cancer-detection.tex
@@ -47,9 +47,9 @@ RSNA Screening Mammography Breast Cancer Detection: Find breast cancers in scree
 			Name&Target&Revised&Complete&Remarks \\  \hline
 			Start&2022-11-28&&2022-12-07&\\ 		 \hline
 			Setup repo&2022-12-07&&2022-12-07&\\ 		 \hline
-			Draft Schedule&2022-12-07&&&\\ 		 \hline
-			Visualize Data&2022-12-08&&&\\ 		 \hline
-			Write code for dummy submission&2022-12-07&&&\\ 		 \hline
+			Draft Schedule&2022-12-07&&&WIP\\ 		 \hline
+			Visualize Data&2022-12-08&&&WIP\\ 		 \hline
+			Write code for dummy submission&2022-12-07&&2022-12-07&Spike Version 4\\ 		 \hline
 			Final Submission&2023-02-27&&&\\ 		 \hline
 		\end{tabular}
 	\end{center}
