--- a/docs/rsna-breast-cancer-detection.bib
+++ b/docs/rsna-breast-cancer-detection.bib
@@ -1,6 +1,6 @@
 @Misc{rsna-breast-cancer-detection,
-  author    = {Chris Carr, FelipeKitamura, HCL-kanishkaa, HCL-Rantig, inversion, John Mongan, Maryam Vazirabad, Michelle Riopel, Robyn Ball, Sohier Dane},
-  title     = {RSNA Screening Mammography Breast Cancer Detection},
+  author    = {Carr, Chris and Kitamura, Felipe and HCL-kanishkaa and HCL-Rantig and inversion and Mongan, John and Vazirabad, Maryam and Riopel, Michelle and Ball, Robyn and Dane, Sohier},
+  title     = {{RSNA} {S}creening {M}ammography {B}reast {C}ancer {D}etection},
   year      = {2022},
   publisher = {Kaggle},
   url       = {https://kaggle.com/competitions/rsna-breast-cancer-detection},
