#4 Data model fields

--- a/docs/rsna-breast-cancer-detection.bib
+++ b/docs/rsna-breast-cancer-detection.bib
@@ -1,9 +1,32 @@
 @Misc{rsna-breast-cancer-detection,
-  author    = {Carr, Chris and Kitamura, Felipe and HCL-kanishkaa and HCL-Rantig and inversion and Mongan, John and Vazirabad, Maryam and Riopel, Michelle and Ball, Robyn and Dane, Sohier},
-  title     = {{RSNA} {S}creening {M}ammography {B}reast {C}ancer {D}etection},
-  year      = {2022},
-  publisher = {Kaggle},
-  url       = {https://kaggle.com/competitions/rsna-breast-cancer-detection},
+  author       = {Carr, Chris and Kitamura, Felipe and HCL-kanishkaa and HCL-Rantig and inversion and Mongan, John and Vazirabad, Maryam and Riopel, Michelle and Ball, Robyn and Dane, Sohier},
+  howpublished = {\url{https://www.kaggle.com/competitions/rsna-breast-cancer-detection/discussion/369262}},
+  note         = {[Online; accessed 8-December-20222]},
+  title        = {{RSNA} {S}creening {M}ammography {B}reast {C}ancer {D}etection},
+  year         = {2022},
+  publisher    = {Kaggle},
+  url          = {https://kaggle.com/competitions/rsna-breast-cancer-detection},
+}
+
+@Misc{birads2022Atlas,
+  author       = {ACR},
+  howpublished = {\url{https://www.acr.org/-/media/ACR/Files/RADS/BI-RADS/BIRADS-Reference-Card.pdf}},
+  note         = {[Online; accessed 8-December-20222]},
+  title        = {ACR BI-RADS®Atlas Fifth Edition},
+}
+
+@Misc{pan2022what,
+  author       = {Pan, Ian},
+  howpublished = {url{https://www.kaggle.com/competitions/rsna-breast-cancer-detection/discussion/369262}},
+  note         = {[Online; accessed 8-December-20222]},
+  title        = {A Brief Intro to Mammography},
+}
+
+@Misc{murphy2021mamography,
+  author       = {Murphy Andrew},
+  howpublished = {\url{https://radiopaedia.org/articles/mammography-views}},
+  note         = {[Online; accessed 8-December-20222]},
+  title        = {Mammography{v}iews},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
