--- a/docs/rsna-breast-cancer-detection.tex
+++ b/docs/rsna-breast-cancer-detection.tex
@@ -44,7 +44,9 @@ RSNA Screening Mammography Breast Cancer Detection: Find breast cancers in scree
 
 \setcounter{tocdepth}{2}
 \tableofcontents
+\listoffigures
 \listoftables
+
 \section{Introduction}
 \begin{table}[H]
 	\begin{center}
@@ -96,6 +98,14 @@ RSNA Screening Mammography Breast Cancer Detection: Find breast cancers in scree
 		\end{tabular}
 	\end{center}
 \end{table}
+
+\begin{figure}[H]
+	\begin{center}
+		\caption[Covariance Matrix for outputs]{Covariance Matrix for outputs. Table had been pruned to eliminate null values.}
+		\includegraphics[width=\textwidth]{covariance}
+	\end{center}
+\end{figure}
+
 \bibliographystyle{unsrt}
 \addcontentsline{toc}{section}{Bibliography}
 \bibliography{rsna-breast-cancer-detection}
