--- a/docs/rsna-breast-cancer-detection.bib
+++ b/docs/rsna-breast-cancer-detection.bib
@@ -29,4 +29,21 @@
   title        = {Mammography{v}iews},
 }
 
+@Article{shen2019deep,
+  author    = {Shen, Li and Margolies, Laurie R and Rothstein, Joseph H and Fluder, Eugene and McBride, Russell and Sieh, Weiva},
+  journal   = {Scientific reports},
+  title     = {Deep learning to improve breast cancer detection on screening mammography},
+  year      = {2019},
+  number    = {1},
+  pages     = {1--12},
+  volume    = {9},
+  publisher = {Nature Publishing Group},
+}
+
+@Misc{radiopaedia2022BIRADS,
+  author       = {Radiopedia Contributors},
+  howpublished = {\url{https://radiopaedia.org/articles/breast-imaging-reporting-and-data-system-bi-rads}},
+  title        = {Breast imaging-reporting and data system (BI-RADS)},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
