#9 Doco for segmentation

--- a/docs/rsna-breast-cancer-detection.bib
+++ b/docs/rsna-breast-cancer-detection.bib
@@ -46,4 +46,15 @@
   title        = {Breast imaging-reporting and data system (BI-RADS)},
 }
 
+@Article{hirahara2021effect,
+  author    = {Hirahara, Daisuke and Takaya, Eichi and Kadowaki, Mizuki and Kobayashi, Yasuyuki and Ueda, Takuya},
+  journal   = {Journal of Computer and Communications},
+  title     = {Effect of the Pixel Interpolation Method for Downsampling Medical Images on Deep Learning Accuracy},
+  year      = {2021},
+  number    = {11},
+  pages     = {150--156},
+  volume    = {9},
+  publisher = {Scientific Research Publishing},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
