Closed #9 Remaining work is covered by new issues

--- a/docs/rsna-breast-cancer-detection.bib
+++ b/docs/rsna-breast-cancer-detection.bib
@@ -57,4 +57,11 @@
   publisher = {Scientific Research Publishing},
 }
 
+@Misc{roberts2022mamographic,
+  author       = {Roberts, David},
+  howpublished = {url{https://www.kaggle.com/competitions/rsna-breast-cancer-detection/discussion/369264}},
+  note         = {[Online; accessed 15-December-20222]},
+  title        = {Mammographic Views},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
