#17 one extra reference

--- a/docs/rsna-breast-cancer-detection.bib
+++ b/docs/rsna-breast-cancer-detection.bib
@@ -64,4 +64,15 @@
   title        = {Mammographic Views},
 }
 
+@Article{wu2019deep,
+  author    = {Wu, Nan and Phang, Jason and Park, Jungkyu and Shen, Yiqiu and Huang, Zhe and Zorin, Masha and Jastrz{\k{e}}bski, Stanis{\l}aw and F{\'e}vry, Thibault and Katsnelson, Joe and Kim, Eric and others},
+  journal   = {IEEE transactions on medical imaging},
+  title     = {Deep neural networks improve radiologists’ performance in breast cancer screening},
+  year      = {2019},
+  number    = {4},
+  pages     = {1184--1194},
+  volume    = {39},
+  publisher = {IEEE},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
